# OZ_codingschool_assignment

./: python.py
DB/: Chapter14_20문제.sql  airbnb.py  chapter01_06.ipynb  chapter07_13.ipynb  data_generate.py  fishbread.sql
DB/chapter22_23/: 삭제초급과제.sql  생성초급과제.sql  업데이트초급과제.sql  읽기초급과제.sql
DB/db_assignment/: yes24_crawl.ipynb
DB/db_yes24/: chap33_36.sql  yes24.py  yes24_crawl.ipynb
DB/mongo_test/: pymongodb.py  subject.py
admin_project/: index.css  index.html
css/first_assignment/: profile.css  profile.html
css/second_assignment/: chat.css  chat.html
flask/: pyproject.toml
html/first_assignment/: profile.html
html/second-assignment/: form.html
js/first_assignment/: user.html
js/second_assignment/: monster.html
js/third_assignment/: join.html
linux/: linux_0113(문제).ipynb  linux_1426.ipynb
melon_crawl/: pyproject.toml
melon_crawl/src/crawl/: crawling.py
melon_crawl/src/utils/: __init__.py  crawl_inform.py  crawl_print.py  crawl_util.py
oz_flask/: pyproject.toml
oz_flask/Part1/JinjaTemplate/: app.py
oz_flask/Part1/JinjaTemplate/templates/: index.html
oz_flask/Part1/Route/: app.py
oz_flask/Part2/Jsonify/: app.py
oz_flask/Part2/RestfulApi/: app.py
oz_flask/Part2/RestfulApi/resources/: item.py
oz_flask/Part2/SmoRest/: api.py
oz_flask/Part3/FlaskMysql/: app.py
oz_flask/Part4/: app.py
oz_flask/RestaurantReservation/: .env  app.py
oz_flask/RestaurantReservation/static/: style.css
oz_flask/instagram/: app.py
oz_flask/notion_as/: app.py  db.yaml
python/: Ch01.task.ipynb  Ch03_task.ipynb  hello.py  hello2.py  hello3.py
(+86 files in other folders)
