[tool.poetry]
name = "oz_flask"
version = "0.1.0"
description = ""
authors = ["hwangtate <ghkdxodud10253504@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.6"
flask = "^3.0.3"
requests = "^2.32.3"
flask-restful = "^0.3.10"
flask-smorest = "^0.44.0"
marshmallow = "^3.21.3"
flask-mysqldb = "^2.0.0"
flask-sqlalchemy = "^3.1.1"
pymysql = "^1.1.1"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
